[tool.poetry]
name = "streamlit-samples"
version = "0.1.0"
description = ""
authors = ["aoteaeoa <128959102+aoteaeoa@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.13"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
